--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "lodash-webpack-plugin": "^0.11.4",
     "netlify-cms": "^1.7.0",
     "prop-types": "^15.6.0",
+    "re-base": "2.2.0",
     "react": "^16.2.0",
     "react-helmet": "^5.2.0",
+    "react-remarkable": "^1.1.3",
     "uuid": "^3.2.1"
   },
   "keywords": [
